--- a/PieChart.html
+++ b/PieChart.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +6,7 @@
     <title>Main Cancer Types</title>
     <link rel="stylesheet" href="PieChart.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
 </head>
 <body>
     <h1>Main Cancer Types</h1>
@@ -17,14 +17,15 @@
     </div>
     <div class="charts">
         <div class="chart-container">
+            <h2>Women</h2>
             <canvas id="womenChart"></canvas>
-            <p>Women</p>
         </div>
         <div class="chart-container">
+            <h2>Men</h2>
             <canvas id="menChart"></canvas>
-            <p>Men</p>
         </div>
     </div>
+    <div id="commonLegend" class="common-legend"></div>
     <script src="PieChart.js"></script>
 </body>
 </html>
