--- a/PieChart.html
+++ b/PieChart.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Cancer Types</title>
     <link rel="stylesheet" href="PieChart.css">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
     <h1>Main Cancer Types</h1>
@@ -16,13 +15,11 @@
         <button onclick="updateCharts('2021')">2021</button>
     </div>
     <div class="charts">
-        <div class="chart-container">
+        <div class="chart-container" id="womenChartContainer">
             <h2>Women</h2>
-            <canvas id="womenChart"></canvas>
         </div>
-        <div class="chart-container">
+        <div class="chart-container" id="menChartContainer">
             <h2>Men</h2>
-            <canvas id="menChart"></canvas>
         </div>
     </div>
     <div id="commonLegend" class="common-legend"></div>
