--- a/story.html
+++ b/story.html
@@ -14,57 +14,57 @@
         <section>
             <h2>Maintain a Healthy Weight</h2>
             <p>Keeping a healthy weight can lower the risk of 13 different types of cancer. Start by maintaining your current weight if you are overweight then aim to lose extra pounds gradually.</p>
-            <a href="healthy_weight.png" target="_blank">
-                <img src="healthy_weight.png" alt="Healthy Weight Image" class="thumbnail">
+            <a href="Images\healthy_weight.png" target="_blank">
+                <img src="Images\healthy_weight.png" alt="Healthy Weight Image" class="thumbnail">
             </a>
         </section>
         <section>
             <h2>Exercise Regularly</h2>
             <p>Regular exercise is crucial for maintaining health. Aim for at least 30 minutes of activity each day.</p>
-            <a href="exercise_regularly.png" target="_blank">
-                <img src="exercise_regularly.png" alt="Exercise Image" class="thumbnail">
+            <a href="Images\exercise_regularly.png" target="_blank">
+                <img src="Images\exercise_regularly.png" alt="Exercise Image" class="thumbnail">
             </a>
         </section>
         <section>
             <h2>Don’t Smoke or Use Smokeless Tobacco</h2>
             <p>Tobacco use is a leading cause of cancer. Quitting smoking and avoiding tobacco products can significantly improve your health.</p>
-            <a href="no_smoking.png" target="_blank">
-                <img src="no_smoking.png" alt="No Smoking Image" class="thumbnail">
+            <a href="Images\no_smoking.png" target="_blank">
+                <img src="Images\no_smoking.png" alt="No Smoking Image" class="thumbnail">
             </a>
         </section>
         <section>
             <h2>Eat a Healthy Diet</h2>
             <p>A healthy diet can reduce cancer risk. Focus on eating plenty of fruits, vegetables, and whole grains while limiting red and processed meats.</p>
-            <a href="healthy_diet.jpg" target="_blank">
-                <img src="healthy_diet.jpg" alt="Healthy Diet Image" class="thumbnail">
+            <a href="Images\healthy_diet.jpg" target="_blank">
+                <img src="Images\healthy_diet.jpg" alt="Healthy Diet Image" class="thumbnail">
             </a>
         </section>
         <section>
             <h2>Limit Alcohol Consumption</h2>
             <p>Alcohol increases the risk of several cancers. The healthiest choice is to avoid alcohol altogether.</p>
-            <a href="no_alcohol.png" target="_blank">
-                <img src="no_alcohol.png" alt="No Alcohol Image" class="thumbnail">
+            <a href="Images\no_alcohol.png" target="_blank">
+                <img src="Images\no_alcohol.png" alt="No Alcohol Image" class="thumbnail">
             </a>
         </section>
         <section>
             <h2>Protect Yourself from the Sun and Avoid Tanning Beds</h2>
             <p>Too much sun exposure can lead to skin cancer. Protect your skin by avoiding excessive sun and not using tanning beds.</p>
-            <a href="sun_protection.png" target="_blank">
-                <img src="sun_protection.png" alt="Sun Protection Image" class="thumbnail">
+            <a href="Images\sun_protection.png" target="_blank">
+                <img src="Images\sun_protection.png" alt="Sun Protection Image" class="thumbnail">
             </a>
         </section>
         <section>
             <h2>Protect Yourself from Sexually Transmitted Infections (STIs)</h2>
             <p>Some STIs like HPV and hepatitis can increase cancer risk. Practicing safe sex and getting vaccinated can help.</p>
-            <a href="protect_from_stis.jpg" target="_blank">
-                <img src="protect_from_stis.jpg" alt="STIs Protection Image" class="thumbnail">
+            <a href="Images\protect_from_stis.jpg" target="_blank">
+                <img src="Images\protect_from_stis.jpg" alt="STIs Protection Image" class="thumbnail">
             </a>
         </section>
         <section>
             <h2>Get Screening Tests</h2>
             <p>Regular screenings can detect cancer early or prevent it altogether. Discuss with your healthcare provider which screenings are appropriate for your age and risk factors.</p>
-            <a href="screening_tests.png" target="_blank">
-                <img src="screening_tests.png" alt="Screening Tests Image" class="thumbnail">
+            <a href="Images\screening_tests.png" target="_blank">
+                <img src="Images\screening_tests.png" alt="Screening Tests Image" class="thumbnail">
             </a>
         </section>
         <section>
